# Niche-Search-Engine-Job-Aggregator

./: .gitignore  Cargo.toml  README.md  ppt.md
common/src/: lib.rs
scraper/: Cargo.toml
scraper/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
