[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tantivy = { version = "0.19", default-features = false, features = ["mmap", "stopwords"] }
tokio = { version = "1.0", features = ["full"] } # Async Runtime
axum = "0.8.8"                     # Web Server
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[overrides]
zstd-sys = "=2.0.9"